# College

./: .gitmodules
ComputerGraphics/: Report.org  Report.tex
ComputerGraphics/Notes/: Boids.org
ComputerGraphics/Project/: CMakeLists.txt  Report.org  notes.org  sphere.txt
ComputerGraphics/Project/MidTermReport/: report.org
ComputerGraphics/Project/Notes/: Fireball.org
ComputerGraphics/Project/libs/glad/include/glad/: glad.h
ComputerGraphics/Project/models/: ball.dae  spider.json  spider.mtl
ComputerGraphics/Project/shaders/: ball.frag  ball.vert  light.frag  shader.frag  shader.vert
ComputerGraphics/Project/src/: camera.h  main.cpp  mesh.h  mesh_hierarchy.h  model.h  strager_hier.h
ComputerGraphics/TestBunker/: CMakeLists.txt
ComputerGraphics/TestBunker/libs/: CMakeLists.txt
ComputerGraphics/TestBunker/libs/glad/: CMakeLists.txt
ComputerGraphics/TestBunker/libs/glad/src/: glad.c
ComputerGraphics/TestBunker/shaders/: ball.frag  light.frag  light.vert  model.frag  model.vert
ComputerGraphics/TestBunker/src/: main.cpp
ComputerVision/: Assignment3-Targets.org
ComputerVision/Assignment2-Postboxes/: CMakeLists.txt  GroundTruth.txt  PostboxBaseLocations.txt  prediction.txt
ComputerVision/Assignment2-Postboxes/NotesAndReport/: report.org  supa.org
ComputerVision/Assignment2-Postboxes/src/: frame_coordinate_extractor.cpp  main.cpp  metrics.cpp  supa.cpp
FinalYearProject/: CoverPage.org  CoverPage.tex  Essay.org  TechnologyPerpetuatingInequality.org  TechnologyPerpetuatingInequality.tex  Video.org
FunctionalProgramming/: .gitignore
FunctionalProgramming/Examples/AnimExample/src/: Example.hs  (+2 more)
FunctionalProgramming/Examples/ShapeExample2/: ShapeExample2.cabal
FunctionalProgramming/Examples/interpreters/: interpreters.cabal  package.yaml
FunctionalProgramming/Examples/scotty-example/: package.yaml
FunctionalProgramming/Examples/transformer-example/: package.yaml  transformers-example.cabal
FunctionalProgramming/Exmaples/StateT/: StateT.cabal
FunctionalProgramming/Exmaples/StateT/app/: StateT.hs
FunctionalProgramming/Minesweeper/: Doc.org  Minesweeper.cabal  notes.org  stack.yaml
FunctionalProgramming/Minesweeper/app/: Main.hs
FunctionalProgramming/Papers/FreeDelivery/: FreeDelivery.cabal  Main.hs
FunctionalProgramming/Papers/MonadicParsing/: Main.hs
FunctionalProgramming/Papers/ScrapBoilerplate/: Main.hs
FunctionalProgramming/ShapeServer/: ShapeServer.cabal  stack.yaml  styles.css
FunctionalProgramming/ShapeServer/NotesAndReport/: notes.org
FunctionalProgramming/ShapeServer/app/: Main.hs
FunctionalProgramming/ShapeServer/bench/: Main.hs
FunctionalProgramming/ShapeServer/src/: Render.hs  SampleDrawing.hs  Shapes.hs
FunctionalProgramming/WeeklyExercises/: Week2-Monads.hs  Week3-TypeClasses.hs  Week4-WriterMonad.hs
FunctionalProgramming/WeeklyExercises/Week10-GADTs/: Main_EK_Wk10.hs  notes.org
FunctionalProgramming/WeeklyExercises/Week11-Calculator/: Cal.cabal
FunctionalProgramming/WeeklyExercises/Week11-Calculator/app/: Main_Wk11_EK.hs
FunctionalProgramming/WeeklyExercises/Week6-TypeInference/: notes.org
FunctionalProgramming/WeeklyExercises/Week8-Transformers/: notes.org
FunctionalProgramming/WeeklyExercises/Week9-Concurrency/: Conc.cabal  notes.org
MachineLearning/: Numpy.ipynb
MachineLearning/Final/: Final.ipynb  Final_Assignment--Steam_Reviews.ipynb  ML-Group.ipynb  en_i.pkl  en_neg_i.pkl  en_text.pkl  reviews_291.jl  translate-302719-4cc72fc518f9.json
MachineLearning/GroupProject/: DataAnalysis.ipynb  Notebook.ipynb
MachineLearning/GroupProject/Notes/: ImportantFeatures.org
MachineLearning/Week1/: week1.csv  wk1.ipynb
MachineLearning/Week2/: Week2.ipynb  week2.csv
MachineLearning/Week3/: week3.csv  wk3.ipynb
MachineLearning/Week4/: week4_1.csv  week4_2.csv  wk4.ipynb  wk4.org
MachineLearning/Week6/: week6.csv  wk6.ipynb  wk6.org
MachineLearning/Week8/: wk8.ipynb  wk8.org  wk82.ipynb
(+23 files in other folders)
