name: ShapeServer
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: SampleDrawing, Render, Shapes
  build-depends: base >= 4.7 && < 5
               , JuicyPixels
               , sort
               , unordered-containers     
executable server
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >= 4.7 && < 5
               , ShapeServer
               , blaze-html
               , scotty
               , text
               , bytestring
               , base64-bytestring
               
benchmark shape-bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, ShapeServer, criterion
