name: StateT
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10
                             
executable A
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: StateT.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >= 4.7 && < 5
               , mtl
               , random